--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_google_place_darkzy
 description: Google places autocomplete widgets for flutter. No wrapper, use https://pub.dartlang.org/packages/google_maps_webservice
 version: 1.0.0
 homepage: https://github.com/DarkzyRB
-repository: https://github.com/DarkzyRB
+repository: https://github.com/DarkzyRB/Flutter-Google-Place-Darkzy
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
