--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_api_headers: ^1.3.0
-  google_maps_webservice: ^0.0.20-nullsafety.5
-  http: ^0.13.4
-  rxdart: ^0.27.4
-  rxdart_ext: ^0.2.2
-  listenable_stream: ^1.1.0
-  collection: ^1.15.0
-  flutter_bloc_pattern: ^2.3.0
+  google_api_headers: ^4.4.5
+#  google_maps_webservice: ^0.0.20-nullsafety.5
+#  google_maps_webservice_ex: ^0.0.1+2
+  flutter_google_maps_webservices: ^1.1.1
+  http: ^1.4.0
+  rxdart: ^0.28.0
+  rxdart_ext: ^0.3.0
+  listenable_stream: ^2.0.1
+  collection: ^1.19.1
+  flutter_bloc_pattern: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -27,5 +29,5 @@ dev_dependencies:
 
 flutter:
   assets:
-    - packages/flutter_google_places_darkzy/assets/google_black.png
-    - packages/flutter_google_places_darkzy/assets/google_white.png
+    - lib/assets/google_black.png
+    - lib/assets/google_white.png
